COU: Update billpay integration docs for adding proper download handler inside webviews

--- a/content/payments/billpay/pre-built-screens/custom-payment.mdx
+++ b/content/payments/billpay/pre-built-screens/custom-payment.mdx
@@ -73,5 +73,8 @@ Depending on the platform you have chosen, please read the appropriate guide to 
 -   <a href="/payments/billpay/custom-payment/iOS" target="_blank">
         iOS
     </a>
+-   <a href="/payments/billpay/custom-payment/cross-platform" target="_blank">
+        Cross platform
+    </a>
 
 <WasPageHelpful />
