--- a/content/payments/billpay/pre-built-screens/custom-payment/android.mdx
+++ b/content/payments/billpay/pre-built-screens/custom-payment/android.mdx
@@ -171,6 +171,10 @@ The interface will contain 2 methods—
 -   `unload` This should be used by your app to dismiss the webview
 -   `initiatePayment` This should be used by the parent app to initiate the payment
 
+<Callout type="tip">
+    <b>Special use case:</b> This <code>unload</code> function can also be used for dismissing the webview and redirecting a user back to your native app once a bill payment journey is completed (i.e. payment is successful) via a CTA from the Setu webview. Please let our team know if you would like to enable this use case for your app.
+</Callout>
+
 <hr class="tertiary" />
 
 ##### Handle payment flow
