--- a/content/payments/billpay/pre-built-screens/custom-payment/cross-platform.mdx
+++ b/content/payments/billpay/pre-built-screens/custom-payment/cross-platform.mdx
@@ -34,28 +34,46 @@ The following steps need to be taken for webview integration—
 
 ##### Switch control from your app to Setu
 
-The link returned by the <a href="/payments/billpay/api-reference/white-label#/category~Link_Generation/operation~EtherealLinkRequest" target="_blank">Create link API</a> should be loaded within the Webview. The `Webview` should have a `WebViewController` attached to it.
+The link returned by the <a href="/payments/billpay/api-reference/white-label#/category~Link_Generation/operation~EtherealLinkRequest" target="_blank">Create link API</a> should be loaded within the Webview. Our sample below uses the [flutter_inappwebview](https://pub.dev/packages/flutter_inappwebview) plugin for webviews. Feel free to use a plugin as per your requirements.
 
 The `controller` will need to implement two JavaScript handlers - 
 
 - `initiatePayment` - Used to initiate payment & transfer control from Setu webview to the flutter application.
 - `unload` - Used by the parent app to dismiss the webview
 
+<Callout type="tip">
+    <b>Special use case:</b> This <code>unload</code> function can also be used for dismissing the webview and redirecting a user back to your native app once a bill payment journey is completed (i.e. payment is successful) via a CTA from the Setu webview. Please let our team know if you would like to enable this use case for your app.
+</Callout>
+<br />
+
+<Callout type="warning">
+ <b>Note:</b> For downloading and saving transaction receipts from the webview, the webview will need to handle a <code>onDownloadStartRequest</code> (or a similar function as per your webview plugin). Our sample below uses the <a href="https://pub.dev/packages/flutter_downloader">flutter_downloader</a> and <a href="https://pub.dev/packages/path_provider">path_provider</a> plugins for downloading and saving transaction receipts. Please follow the plugin specific documentation for implementation. Make sure you have added necessary permissions in your <code>AndroidManifest.xml</code> and <code>Info.plist</code> files for downloading and saving files.
+</Callout>
+<br />
+
 <CodeBlockWithCopy language="java">
 {`
+    import 'dart:io';
+    import 'dart:isolate';
+    import 'dart:ui';
     import 'package:flutter/material.dart';
-    import 'package:url_launcher/url_launcher_string.dart';
-    import 'package:webview_flutter/webview_flutter.dart';
+    import 'package:url_launcher/url_launcher.dart';
     import 'package:flutter_inappwebview/flutter_inappwebview.dart';
-    void main() {
-        runApp(MyApp());
+    import 'package:flutter_downloader/flutter_downloader.dart';
+    import 'package:path_provider/path_provider.dart';
+    Future main() async {
+        WidgetsFlutterBinding.ensureInitialized();
+        await FlutterDownloader.initialize(
+            debug: true, // optional: set false to disable printing logs to console
+        );
+        runApp(new MyApp());
     }
     class MyApp extends StatelessWidget {
         @override
         Widget build(BuildContext context) {
             return MaterialApp(
                 home: RpWebPage(
-                    link: 'https://billpay.setu.co/1332224001296041242',
+                    link: 'https://billpay.setu.co/1234',
                 ), // Replace with the actual URL
             );
         }
@@ -67,37 +85,16 @@ The `controller` will need to implement two JavaScript handlers -
         State<RpWebPage> createState() => _RpWebPageState();
     }
     class _RpWebPageState extends State<RpWebPage> {
-        late WebViewController controller;
         late InAppWebViewController webView;
         bool isButtonClicked = false;
         @override
         void initState() {
             super.initState();
-            controller = WebViewController()
-            ..setJavaScriptMode(JavaScriptMode.unrestricted)
-            ..setNavigationDelegate(NavigationDelegate(
-                onProgress: (progress) {},
-                onPageStarted: (String url) {},
-                onPageFinished: (String url) {},
-                onNavigationRequest: ((NavigationRequest request) {
-                // Whitelist UPI app specific custom schemes
-                if (isButtonClicked && request.url.contains('upi') ||
-                    request.url.contains('phonepe')) {
-                    launchUrlString(request.url, mode: LaunchMode.externalApplication);
-                    return NavigationDecision
-                        .prevent; // Prevent the WebView from navigating to the UPI URL
-                }
-                return NavigationDecision.navigate; // Allow navigation to other URLs
-                }),
-            ));
         }
         void _loadUrl() {
             setState(() {
-            isButtonClicked = true;
+                isButtonClicked = true;
             });
-            if (controller != null) {
-                controller.loadRequest(Uri.parse(widget.link));
-            }
         }
         @override
         Widget build(BuildContext context) {
@@ -115,23 +112,24 @@ The `controller` will need to implement two JavaScript handlers -
                     Expanded(
                         child: isButtonClicked
                             ? InAppWebView(
-                                initialUrlRequest:
-                                    URLRequest(url: WebUri.uri(Uri.parse(widget.link))),
+                                initialSettings: InAppWebViewSettings(
+                                    allowFileAccess: true,
+                                    allowFileAccessFromFileURLs: true
+                                ),
+                                initialUrlRequest: URLRequest(url: WebUri.uri(Uri.parse(widget.link))),
                                 onWebViewCreated: (InAppWebViewController controller) {
                                     webView = controller;
                                 },
                                 onLoadStop: (controller, url) async {
-                                    // Method to handle payment
                                     controller.addJavaScriptHandler(
                                         handlerName: 'initiatePayment',
                                         callback: (args) async {
-                                            print('Received from JS: $args');
+                                            print('Received from WebView: $args');
                                             var paymentData = args[0];
                                             print('Payment data: $paymentData');
-                                            // process payment with payment data
+                                            // add your custom payment logic here
                                         },
                                     );
-                                    // Method to unload webview
                                     controller.addJavaScriptHandler(
                                         handlerName: 'unload',
                                         callback: (args) async {
@@ -139,13 +137,32 @@ The `controller` will need to implement two JavaScript handlers -
                                         },
                                     );
                                 },
+                                // Handle downloading the receipt
+                                onDownloadStartRequest: (controller, request) async {
+                                    print("onDownloadStart $request");
+                                    final dir = Platform.isAndroid
+                                        ? (await getExternalStorageDirectory())?.path
+                                        : (await getApplicationDocumentsDirectory()).uri.path;
+                                    print("saving in $dir");
+                                    final taskId = await FlutterDownloader.enqueue(
+                                        url: request.url.toString(),
+                                        savedDir: dir!,
+                                        showNotification: true, // show download progress in status bar (for Android)
+                                        openFileFromNotification: true, // click on notification to open downloaded file (for Android)
+                                        saveInPublicStorage: true,
+                                        allowCellular: true
+                                    );
+                                    // Open the downloaded file
+                                    await FlutterDownloader.open(taskId: taskId!);
+                                },
                             )
                             : Container(),
-                    ),
+                        ),
                     ],
                 ),
             );
         }
+    }
 `}
 </CodeBlockWithCopy>
 
@@ -182,7 +199,7 @@ Once you are done testing your integration, ensure that all KYC and legal agreem
 <hr class="primary" />
 
 <Callout type="tip">
-  We are updating the docs for custom payment based integration for other cross platform frameworks like <code>React native</code>. Please bear with us for a while.
+  We are updating the docs for custom payment based integration for other cross platform frameworks like <code>React native</code> Please bear with us for a while.
 </Callout>
 
 <WasPageHelpful />
