Billpay: Add cross platform receipt download handlers and remove unused custom payment endpoint (#144)
* COU: Update billpay integration docs for adding proper download handler inside webviews

* remove wrong custom payment webhook endpoint from docs

* Update iOS

---------

Co-authored-by: Aditya Gannavarapu <adityagannavarapu.67@gmail.com>

--- a/content/payments/billpay/pre-built-screens/custom-payment/iOS.mdx
+++ b/content/payments/billpay/pre-built-screens/custom-payment/iOS.mdx
@@ -59,6 +59,8 @@ You can have the following scenarios—
   All query parameters should be url-encoded to escape special characters
 </Callout>
 
+<br/>
+
 The above request will return URL based on the input params. Here’s a sample—
 
 <CodeBlockWithCopy language="json">
@@ -80,6 +82,12 @@ The `userContentController` will need to implement two functions—
 
 - `initiate_payment` — Used to initiate payment and transfer control from webview to iOS application
 - `unload` — Used by the parent app to dismiss the webview
+
+<Callout type="tip">
+    <b>Special use case:</b> This <code>unload</code> function can also be used for dismissing the webview and redirecting a user back to your native app once a bill payment journey is completed (i.e. payment is successful) via a CTA from the Setu webview. Please let our team know if you would like to enable this use case for your app.
+</Callout>
+
+<br/>
 
 <CodeBlockWithCopy language="bash">
 {`// The iOS observer function
