--- a/content/payments/billpay/api-integration/objects.mdx
+++ b/content/payments/billpay/api-integration/objects.mdx
@@ -43,6 +43,10 @@ Payment modes supported by a biller.
 | Bharat QR        |
 | USSD             |
 
+## State and City mapping
+
+[Click here &#8599](https://docs.google.com/spreadsheets/d/18LYdPbEw5JCB-bOp3gacbV6xUeHun_gBxbLeGxBuhK8/edit?usp=sharing) for State and City Biller Coverage Mapping
+
 ## Customer
 
 Customer object holds the customer mobile number and the customer bill parameters.
@@ -196,7 +200,6 @@ Amount acceptance by the biller.
 | `Exact and above` | Exact amount or above |
 | `Any`             | Any exactness         |
 
-
 ## Payment Limit
 
 | parameter             | type                          | description                                             |
@@ -283,16 +286,16 @@ Maxium amount accepted by the biller for the [Payment Channel](#payment-channel)
 
 ### Response
 
-| parameter            | type                                      | description                                                     |
-| -------------------- | ----------------------------------------- | --------------------------------------------------------------- |
-| refId                | `string`                                  | BBPS Reference ID                                               |
-| status               | [Transaction Status](#transaction-status) | Transaction Status                                              |
-| transactionId        | `string`                                  | Setu Transaction ID                                             |
-| partnerRefId         | `string` (6 - 35 characters)              | Payment Reference ID tagged by agent                            |
-| billerId             | `string`                                  | BBPS Biller ID                                                  |
-| amount               | `integer`                                 | Amount in paise                                                 |
-| customerMobileNumber | `string` (6, 10 and 20 digits)            | Customer Mobile Number                                          |
-| timestamp            | `date-time`                               | Transaction timestamp                                           |
+| parameter            | type                                      | description                          |
+| -------------------- | ----------------------------------------- | ------------------------------------ |
+| refId                | `string`                                  | BBPS Reference ID                    |
+| status               | [Transaction Status](#transaction-status) | Transaction Status                   |
+| transactionId        | `string`                                  | Setu Transaction ID                  |
+| partnerRefId         | `string` (6 - 35 characters)              | Payment Reference ID tagged by agent |
+| billerId             | `string`                                  | BBPS Biller ID                       |
+| amount               | `integer`                                 | Amount in paise                      |
+| customerMobileNumber | `string` (6, 10 and 20 digits)            | Customer Mobile Number               |
+| timestamp            | `date-time`                               | Transaction timestamp                |
 
 <hr class="primary" />
 
