--- a/content/payments/upi-deeplinks/notifications.mdx
+++ b/content/payments/upi-deeplinks/notifications.mdx
@@ -39,14 +39,16 @@ After Setu receives a callback from the bank for a particular payment, we send a
         "billerBillID": "918147077472",
         "payerVpa": "saainithil97@icici",
         "platformBillID": "896444053527201086",
-        "receiptId": "292cdeff-f4c6-4684-b266-43586f5234d0",
+        "receiptId": "AXI7014352b4b3e4e2c9e9e62af311bf34",
+	"cardBIN": "XXXXXX" // this parameter will be only sent to RuPay Credit Card enabled merchants for UPI DeepLinks
+	"paymentMode": "Rupay Credit" // this parameter will be only sent to RuPay Credit Card enabled merchants for UPI DeepLinks
         "sourceAccount": {            // this is the account from which the payment was made and will only be sent for TPV-enabled merchants
           "ifsc": "SETU0000012",      
           "name": "Noresh",           
           "number": "9009120939129"
         },
         "status": "PAYMENT_SUCCESSFUL",
-        "transactionId": "260843001102590",
+        "transactionId": "440542260498", //this is called as RRN in the UPI ecosystem, the customer will see this ID on UPI apps after every payment
         "transactionNote": "Payment for 918147077472",
         "additionalInfo" : {   // same as values defined when creating the link
           "UUID": "b6b6f173-8649-4b2e-9c22-f78e9195a23e",
@@ -95,10 +97,12 @@ A payment can fail for multiple reasons as explained below:
         "billerBillID": "918147077472",
         "payerVpa": "saainithil97@icici",
         "platformBillID": "896445757228320073",
-        "receiptId": "774cbd68-0106-4635-b861-986d4a5c9792",
+        "receiptId": "AXI7014352b4b3e4e2c9e9e62af311bf34",
         "status": "PAYMENT_FAILED",
-        "transactionId": "6917454577784936",
+	"transactionId": "440542260498", //this is called as RRN in the UPI ecosystem, the customer will see this ID on UPI apps after every payment
         "transactionNote": "Payment for 918147077472",
+	"cardBIN": "XXXXXX" // this parameter will be only sent to RuPay Credit Card enabled merchants for UPI DeepLinks
+	"paymentMode": "Rupay Credit" // this parameter will be only sent to RuPay Credit Card enabled merchants for UPI DeepLinks
         "additionalInfo" : {   // same as values defined when creating the link
           "UUID": "b6b6f173-8649-4b2e-9c22-f78e9195a23e",
           "tags": "electricity"
@@ -382,12 +386,12 @@ The bill created won’t expire, allowing customers to retry the payment.
         "payeeVpa": "fortest@kaypay",
         "payerVpa": "saainithil97@icici",
         "paymentChannel": "UPI",
-        "paymentReferenceNumber": "9921837467033533",
+        "paymentReferenceNumber": "AXI7014352b4b3e4e2c9e9e62af311bf34",  // this value is identified as "receiptId" in payment successful/failed notification
         "platformBillID": "1217499640581064416",
         "setuDescription": "The customer's debit attempt failed.",
         "status": "PAYMENT_ATTEMPT_FAILED",
         "transactionDate": "2023-08-03 12:16:12",
-        "transactionId": "615436a8-434c-43db-8a57-dd4cf11dff3e"
+        "transactionId": "440542260498", //this is called as RRN in the UPI ecosystem, the customer will see this ID on UPI apps after every payment
       },
       "timeStamp": 1691045172577,
       "type": "PAYMENT_ATTEMPT_FAILED",
