--- a/content/payments/billpay/pre-built-screens/custom-payment/apis.mdx
+++ b/content/payments/billpay/pre-built-screens/custom-payment/apis.mdx
@@ -22,20 +22,18 @@ The following API needs to be integrated by you, and is sent in the case of a su
 **Headers**
 
 <CodeBlockWithCopy language="bash">
-    {`Content-type: application/json
-x-api-user: api user name issued by Setu
-x-api-password: api password issued by Setu`}
+  {`Content-type: application/json`}
 </CodeBlockWithCopy>
 
 **Request**
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "orderId": "COUWLje9V7wWs9N3w",
   "transactionId": "UNIQUE_PAYMENT_TRANSACTION_ID",
   "paymentDateTime": "YYYY-MM-DD HH:MM:SS in UTC",
   "amount": "100.00",
-  "paymentMode": "CASH|UPI|IMPS|NEFT|ACCOUNT TRANSFER|INTERNET BANKING|WALLET|DEBIT CARD",
+  "paymentMode": "CASH|UPI|IMPS|NEFT|AEPS|ACCOUNT TRANSFER|INTERNET BANKING|WALLET|DEBIT CARD|CREDIT CARD|PREPAID CARD|Bharat QR|USSD",
   "paymentStatus": "SUCCESS|FAILURE"
 }`}
 </CodeBlockWithCopy>
@@ -45,7 +43,7 @@ The `orderId` is always prefixed with `COUWL` to identify Setu payment requests.
 **Response**
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "status": "acknowledged"
 }`}
 </CodeBlockWithCopy>
@@ -62,19 +60,21 @@ These APIs are needed to handle various payment scenarios and let Setu know abou
 
 **URL**
 
-As provided by you.
+As provided by you, with the suffix `/setu/v1/getPaymentStatus`.
+
+For example, if the URL provided by you is `https://example.com`, the URL for this API will be `https://example.com/setu/v1/getPaymentStatus`.
 
 **Headers**
 
 <CodeBlockWithCopy language="bash">
-    {`X-SETU-BILLPAY-API-KEY: 77kxHrhbKNYXMwzHWFranymXV2xRkSRE
+  {`X-SETU-BILLPAY-API-KEY: 77kxHrhbKNYXMwzHWFranymXV2xRkSRE
 Content-Type: application/json`}
 </CodeBlockWithCopy>
 
 **Request**
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "orderId": "COUWLje9V7wWs9N3w"
 }`}
 </CodeBlockWithCopy>
@@ -82,7 +82,7 @@ Content-Type: application/json`}
 **Response**
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "status": "success/invalid-order-id",
   "message": "",
   "data": {
@@ -90,7 +90,7 @@ Content-Type: application/json`}
     "transactionId": "UNIQUE_PAYMENT_TRANSACTION_ID",
     "paymentDateTime": "YYYY-MM-DD HH:MM:SS in UTC",
     "amount": "100.00",
-    "paymentMode": "CASH|UPI|IMPS|NEFT|ACCOUNT TRANSFER|INTERNET BANKING|WALLET|DEBIT CARD",
+    "paymentMode": "CASH|UPI|IMPS|NEFT|ACCOUNT TRANSFER|INTERNET BANKING|WALLET|DEBIT CARD|CREDIT CARD|PREPAID CARD|Bharat QR|USSD",
     "paymentStatus": "SUCCESS|FAILURE"
   }
 }`}
@@ -102,17 +102,23 @@ Content-Type: application/json`}
 
 This API should be be idempotent on your end.
 
+**URL**
+
+As provided by you, with the suffix `/setu/v1/refund`.
+
+For example, if the URL provided by you is `https://example.com`, the URL for this API will be `https://example.com/setu/v1/refund`.
+
 **Headers**
 
 <CodeBlockWithCopy language="bash">
-    {`X-SETU-BILLPAY-API-KEY: 77kxHrhbKNYXMwzHWFranymXV2xRkSRE
+  {`X-SETU-BILLPAY-API-KEY: 77kxHrhbKNYXMwzHWFranymXV2xRkSRE
 Content-Type: application/json`}
 </CodeBlockWithCopy>
 
 **Request**
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "orderId": "COUWLje9V7wWs9N3w",
   "amount": "100.00",
   "transactionId": "UNIQUE_PAYMENT_TRANSACTION_ID"
@@ -122,7 +128,7 @@ Content-Type: application/json`}
 **Response**
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "status": "success/failure",
   "message": "Accepted/Reason for rejection",
   "data": {
@@ -144,7 +150,7 @@ Content-Type: application/json`}
 **Headers**
 
 <CodeBlockWithCopy language="bash">
-    {`Content-type: application/json
+  {`Content-type: application/json
 x-api-user: api user name issued by Setu
 x-api-password: api password issued by Setu`}
 </CodeBlockWithCopy>
@@ -152,7 +158,7 @@ x-api-password: api password issued by Setu`}
 **Request**
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "orderId": "COUWLje9V7wWs9N3w",
   "refundId": "UNIQUE_REFUND_ID",
   "refundStatus": "success/failure",
@@ -163,7 +169,7 @@ x-api-password: api password issued by Setu`}
 **Response**
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "status": "acknowledged"
 }`}
 </CodeBlockWithCopy>
