--- a/content/payments/billpay/pre-built-screens/custom-payment/website.mdx
+++ b/content/payments/billpay/pre-built-screens/custom-payment/website.mdx
@@ -40,7 +40,9 @@ You need to implement the following API for this purpose
 
 **URL**
 
-As shared by you
+As you provided by you, with the suffix: `/setu/v1/getPaymentLink`.
+
+For example, if the URL provided by you is `https://example.com`, the URL for this API will be `https://example.com/setu/v1/getPaymentLink`.
 
 **Headers**
 
@@ -58,7 +60,7 @@ Note that the API key is issued by you
   "orderId": "je9V7wWs9N3w",
   "amount": 1201.00,
   "customerMobileNumber": "9481773053",
-  "postPaymentUrl": "https://billpay.setu.co/7c58e511-c1f5-4e1b-8470-50fc2fbd30a4/post-payment/c4e154e6-7b2b-4e0a-9749-60499b61ce93",
+  "postPaymentUrl": "https://billpay.setu.co/payment/post-payment/c4e154e6-7b2b-4e0a-9749-60499b61ce93",
   "allowedPaymentMethods": [
     "CASH", "UPI"
   ]
