add missing AEPS payment mode

--- a/content/payments/billpay/pre-built-screens/custom-payment/apis.mdx
+++ b/content/payments/billpay/pre-built-screens/custom-payment/apis.mdx
@@ -90,7 +90,7 @@ Content-Type: application/json`}
     "transactionId": "UNIQUE_PAYMENT_TRANSACTION_ID",
     "paymentDateTime": "YYYY-MM-DD HH:MM:SS in UTC",
     "amount": "100.00",
-    "paymentMode": "CASH|UPI|IMPS|NEFT|ACCOUNT TRANSFER|INTERNET BANKING|WALLET|DEBIT CARD|CREDIT CARD|PREPAID CARD|Bharat QR|USSD",
+    "paymentMode": "CASH|UPI|IMPS|NEFT|AEPS|ACCOUNT TRANSFER|INTERNET BANKING|WALLET|DEBIT CARD|CREDIT CARD|PREPAID CARD|Bharat QR|USSD",
     "paymentStatus": "SUCCESS|FAILURE"
   }
 }`}
