RPD data purge doc

--- a/content/data/bav/reverse-penny-drop/api-integration.mdx
+++ b/content/data/bav/reverse-penny-drop/api-integration.mdx
@@ -595,6 +595,10 @@ This is an optional API. This API lets you know the bank verification status.
     to know if the customer has made the INR 1 payment for bank verification or
     not.
 </Callout>
+<br />
+<Callout type="warning">
+  Note: Data will be purged after receiving a 2xx status code from the webhook. In the case of a non-2xx status code, the data will be purged after 24 hours.
+</Callout>
 
 <Row>
     <Portion desktopSpan="whole">
@@ -621,7 +625,7 @@ This is an optional API. This API lets you know the bank verification status.
                                 <CodeBlockWithCopy language="json">
                                     {`{
     "status": "BAV_REVERSE_PENNY_DROP_PAYMENT_SUCCESSFUL", // or, BAV_REVERSE_PENNY_DROP_CREATED, BAV_REVERSE_PENNY_DROP_EXPIRED, BAV_REVERSE_PENNY_DROP_PAYMENT_FAILED
-    "data": { // if status is BAV_REVERSE_PENNY_DROP_PAYMENT_SUCCESSFUL, otherwise null
+    "data": { // Null if status is BAV_REVERSE_PENNY_DROP_PAYMENT_SUCCESSFUL & data is not purged
         "accountType": "BANK_ACCOUNT",
         "bankAccountType":  "SAVINGS" // Optional, can be null
         "bankAccountIfsc": "SBIN0000539",
