--- a/content/data/bav/reverse-penny-drop/api-integration.mdx
+++ b/content/data/bav/reverse-penny-drop/api-integration.mdx
@@ -625,7 +625,7 @@ This is an optional API. This API lets you know the bank verification status.
                                 <CodeBlockWithCopy language="json">
                                     {`{
     "status": "BAV_REVERSE_PENNY_DROP_PAYMENT_SUCCESSFUL", // or, BAV_REVERSE_PENNY_DROP_CREATED, BAV_REVERSE_PENNY_DROP_EXPIRED, BAV_REVERSE_PENNY_DROP_PAYMENT_FAILED
-    "data": { // Null if status is BAV_REVERSE_PENNY_DROP_PAYMENT_SUCCESSFUL & data is not purged
+    "data": { // null if status is BAV_REVERSE_PENNY_DROP_PAYMENT_SUCCESSFUL and data is not purged
         "accountType": "BANK_ACCOUNT",
         "bankAccountType":  "SAVINGS" // Optional, can be null
         "bankAccountIfsc": "SBIN0000539",
