--- a/content/payments/umap/api-reference.mdx
+++ b/content/payments/umap/api-reference.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_title: API Reference
-page_title: UMAP - API Reference
+sidebar_title: API reference
+page_title: UMAP - API reference
 order: 2
 visible_in_sidebar: true
 ---
