feat(UPI-1144): add links to API references in refunds and disputes page
Changes:
- add links to API references in refunds and disputes page

Closes UPI-1144

--- a/content/payments/umap/refunds-disputes.mdx
+++ b/content/payments/umap/refunds-disputes.mdx
@@ -41,6 +41,10 @@ UMAP equips merchants with a straightforward, API-based mechanism to process ref
 
 **Issuing Refunds:** Merchants can initiate refunds through the create refund API by submitting the details of the original transaction. UMAP coordinates with NPCI to process the refund, ensuring the amount is returned to the customer's account.
 
+<a href="/payments/umap/api-reference#/category~refund/operation~refund#create"target="_blank">
+<code>createRefund</code> ↗
+</a>
+
 **Notification Updates:** Throughout the refund process, UMAP provides merchants with timely updates regarding the refund status, ensuring transparency and allowing merchants to keep their customers informed.
 
 ### Dispute Resolution
@@ -50,6 +54,11 @@ Dispute Initiation: Disputes are initiated by customers and communicated to UMAP
 #### Merchant Response
 
 Merchants have the option to either accept or reject the dispute through UMAP:
+
+**Fetch Dispute API:**
+<a href="/payments/umap/api-reference#/category~disputes/operation~disputes#fetchDisputeById"target="_blank">
+<code>fetchDispute</code> ↗
+</a>
 
 **Accepting a Dispute:** Agreeing to the dispute automatically triggers a refund to the customer for the disputed transaction.
 
