feat(UPI-1144): add umap overview what is umap section
Changes:
- add umap overview what is umap section

Closes UPI-1144

--- a/content/payments/umap/overview.mdx
+++ b/content/payments/umap/overview.mdx
@@ -8,3 +8,18 @@ visible_in_sidebar: true
 ## UMAP Overview
 
 Unified Payments Interface (UPI) is a real-time payment system developed by the National Payments Corporation of India that facilitates inter-bank transactions through a mobile platform. It enables the integration of multiple bank accounts into a single mobile application, offering a seamless and secure interface for initiating and managing financial transactions. The API provides a standardized protocol for payment service providers and merchants, allowing for instant money transfers, bill payments, and merchant payments using a unique identifier (UPI ID) or QR code. UPI's API architecture simplifies the transaction process, making it accessible and efficient for users, while ensuring robust security measures are in place to protect sensitive financial information.
+
+### What is UMAP
+UMAP is a comprehensive UPI product suite designed to empower merchants and aggregators by providing state-of-the-art UPI solutions. Our platform stands out for its exceptional user experience, cloud-native infrastructure, and latest UPI offerings, facilitated through a wide array of APIs tailored to meet the modern needs of digital commerce.
+
+#### Key Features
+
+- Wide Spectrum of UPI Offerings: Access to a complete range of UPI services, ensuring you can cater to all customer payment preferences.
+- Refund and Dispute Management: Specialized APIs for handling refunds and disputes efficiently, enabling smooth operational flow.
+- Real-Time Notifications and Updates: Stay informed with instant notifications and updates throughout the transaction process, keeping you in control of your business operations.
+
+#### Benefits for Your Business
+
+- Enhanced User Experience: Our focus on seamless integration and user-friendly interfaces results in higher customer satisfaction.
+- Operational Efficiency: Our platform simplifies complex processes, from payment acceptance to dispute resolution, ensuring your business runs smoothly.
+- Informed Decision-Making: With continuous status updates & analytics, you're always equipped with the latest transaction insights
