fix(UPI-1144): add page headings for merchant onboarding pages
Changes:
- add page headings for merchant onboarding pages

Closes UPI-1144

--- a/content/payments/umap/merchant-onboarding.mdx
+++ b/content/payments/umap/merchant-onboarding.mdx
@@ -5,6 +5,8 @@ order: 3
 visible_in_sidebar: true
 ---
 
+## Merchant Onboarding
+
 The merchant onboarding flow is a critical process designed to seamlessly integrate merchants into the UMAP ecosystem, enabling them to start accepting UPI payments. This journey involves several key steps, from initial information collection to the final activation of the merchant’s ability to process transactions.
 
 **Information Collection:**The journey begins with the operations team gathering all necessary details from the merchant. This step is foundational, ensuring that the UMAP system has all the relevant information to proceed with the onboarding process.
