--- a/content/payments/umap/merchant-onboarding/additional-flows.mdx
+++ b/content/payments/umap/merchant-onboarding/additional-flows.mdx
@@ -5,6 +5,7 @@ order: 1
 visible_in_sidebar: true
 ---
 
+## Additional Flows
 
 **Merchant Txn Status Updation (updateTxnStatus API):**If a merchant needs to be disabled by an aggregator then they can call this API to update their transaction status. If a merchant is disabled UMAP will decline all transactions to the merchant VPA. 
 
