--- a/content/payments/umap/payments/accept-payments-via-collect-request.mdx
+++ b/content/payments/umap/payments/accept-payments-via-collect-request.mdx
@@ -8,6 +8,20 @@ visible_in_sidebar: true
 
 The Collect Request in UPI is a customer-driven payment mode where the merchant initiates a transaction by providing the customer's Virtual Payment Address (VPA). Upon initiation, the customer receives a notification on their UPI app to authorize the transaction, facilitating a seamless payment completion.
 
+<a href="/payments/umap/api-reference#/category~collect/operation~collect#create"target="_blank">
+    <code>Create Collect Request</code> ↗
+</a>
+<br/>
+
 **Collect Request Creation(create Collect API):** A collect product instance is created by the merchant inputting the customer's VPA. This action triggers a collect request, notifying the customer through their UPI app to proceed with the transaction.
 
-**Fetch Transaction Details(fetchLastByProductInstanceId payments API):** After the customer responds to the collect request, transaction details can be fetched using a unique identifier or retrieval reference number, enabling merchants to access specific payment information.
+
+<br/>
+<a href="/payments/umap/api-reference#/category~collect/operation~collect#fetchById"target="_blank">
+    <code>Fetch by ID</code> ↗
+</a>
+<br/>
+
+**Fetch Collect Request(fetchById API):** After the customer responds to the collect request, transaction details can be fetched using a unique identifier or retrieval reference number, enabling merchants to access specific collect request.
+
+
