--- a/content/payments/umap/payments/accept-payments-via-intent-qr.mdx
+++ b/content/payments/umap/payments/accept-payments-via-intent-qr.mdx
@@ -8,8 +8,18 @@ visible_in_sidebar: true
 
 Merchants can offer their customers a seamless payment experience by utilizing UMAP APIs to create payment links. These links can either be directly integrated into their applications or converted into QR codes for easy scanning. Below is a detailed guide on how to implement this process:
 
+<a href="/payments/umap/api-reference#/category~payment-link/operation~payment-link#create"target="_blank">
+    <code>Generate Payment Link</code> ↗
+</a>
+<br/>
+
 **Generate Payment Link (create payment-link API):** The merchant generates a payment link. This unique link serves as the gateway for customers to initiate intent transactions via their Third-Party Application Provider (TPAP).
 
 **Customer Initiated Transaction:** Customers use the generated payment link to commence the payment process through their UPI app. This action triggers the transaction flow, engaging the UMAP system to process the payment.
 
-**Retrieve Payment Details (fetchLastByProductInstanceId payments API):** Following the initiation of the transaction, the system retrieves the payment details. This retrieval is based on the payment link ID or a reference number, ensuring you have access to transaction information for confirmation and record-keeping.
+<a href="/payments/umap/api-reference#/category~payment-link/operation~payment-link#fetchById"target="_blank">
+    <code>Retrieve Payment Details</code> ↗
+</a>
+<br/>
+
+**Retrieve Payment Details (Check Status API):** Following the initiation of the transaction, the system retrieves the payment details. This retrieval is based on the payment link ID or a reference number, ensuring you have access to transaction information for confirmation and record-keeping.
