feat(UPI-1144): add txn status image
Changes:
- add txn status image to transaction monitoring page
- add txn statuses content to payment notifications page
- add descriptions for payment notifications

Closes UPI-1144

--- a/content/payments/umap/transaction-monitoring.mdx
+++ b/content/payments/umap/transaction-monitoring.mdx
@@ -21,6 +21,11 @@ The UMAP platform ensures transparency throughout the transaction process by def
 
 Understanding these statuses allows merchants and stakeholders to effectively track and manage their transactions, ensuring a smooth operational flow and an optimal customer experience.
 
+<img
+  src="https://storage.googleapis.com/strapi-assets/latest/transaction-statuses/transaction-statuses.png"
+  alt="Bridge"
+/>
+
 ### Check Status API
 
 <a href="/payments/umap/api-reference#/category~payments/operation~payments#fetchById"target="_blank">
