--- a/content/payments/umap/notifications/payments.mdx
+++ b/content/payments/umap/notifications/payments.mdx
@@ -7,7 +7,26 @@ visible_in_sidebar: true
 
 ## Payments Notifications & Alerts
 
+The UMAP platform ensures transparency throughout the transaction process by defining clear statuses that a transaction can assume from initiation to completion. These statuses reflect the transaction's current state, based on the responses received from various entities involved. Understanding these statuses will help merchants manage transactions effectively.
+
+**Payment Initiated:** Marks the beginning of a transaction. This status is set when a customer starts a transaction using a QR Code, In-App Flow, Intent Link, or a Collect request via their personal UPI app. The merchant is immediately notified of this initiation.
+
+**Payment Pending:** Indicates an intermediate, non-terminal state. A transaction enters this status due to various reasons such as system delays, failure in receiving the final notification, or system unavailability during the transaction. It signifies that the transaction is still in progress and has not yet reached a conclusive outcome.
+
+**Payment Successful:** A terminal state signifying a completed transaction. This status is assigned when the transaction is successful, and the funds have been transferred to the merchant. Merchants can proceed with delivering the goods or services to the customer.
+
+**Payment Failed:** Another terminal state, indicating that the transaction did not go through. Reasons for failure might include business declines or technical issues. In this scenario, the merchant has not received the funds, and the goods or services should not be delivered. Merchants are advised to inform the customer of the failure and suggest retrying the transaction.
+
+Understanding these statuses allows merchants and stakeholders to effectively track and manage their transactions, ensuring a smooth operational flow and an optimal customer experience.
+
+<img
+  src="https://storage.googleapis.com/strapi-assets/latest/transaction-statuses/transaction-statuses.png"
+  alt="Bridge"
+/>
+
 ### Payment Initiated
+
+This is the webhook notification which is sent to the merchant when a payment is initiated
 
 <CodeBlockWithCopy language="json">
 {`{
@@ -43,6 +62,8 @@ visible_in_sidebar: true
 </CodeBlockWithCopy>
 
 ### Payment Pending
+
+This is the webhook notification which is sent to the merchant in case of a deemed transaction. Please note that this is not a terminal status. post which we will send a second notification for the same transaction.  The notification is shared below - 
 
 <CodeBlockWithCopy language="json">
 {`{
@@ -81,6 +102,8 @@ visible_in_sidebar: true
 
 ### Payment Success
 
+This is the webhook notification which is sent to the merchant in case of a successful payment 
+
 <CodeBlockWithCopy language="json">
 {`{
    // Event attributes
@@ -117,6 +140,8 @@ visible_in_sidebar: true
 </CodeBlockWithCopy>
 
 ### Payment Failed
+
+This is the webhook notification which is sent to the merchant in case of a failed payment. The notification is shared below -
 
 <CodeBlockWithCopy language="json">
 {`{
