feat(UPI-1144): add API specs, images for umap merchant onboarding pages
Changes:
- add merchant onboarding image on umap merchant onboarding page
- create sub pages under umap merchant onboarding page for create merchant
api, create vpa api, check vpa availability api

Closes UPI-1144

--- a/content/payments/umap/merchant-onboarding.mdx
+++ b/content/payments/umap/merchant-onboarding.mdx
@@ -12,27 +12,14 @@ The merchant onboarding flow is a critical process designed to seamlessly integr
 **Information Collection:**The journey begins with the operations team gathering all necessary details from the merchant. This step is foundational, ensuring that the UMAP system has all the relevant information to proceed with the onboarding process.
 
 **Merchant Record Creation (createWithInfo API):**Upon collecting the merchant's information, a preliminary verification is conducted. The merchant's record is then created in the UMAP system, marking the formal initiation of their onboarding journey.
-<a href="/payments/umap/api-reference#/category~merchant/operation~merchant#createWithInfo"target="_blank">
-<code>createWithInfo</code> ↗
-</a>
-
-<br/>
 
 **Checking VPA Availability (checkAvailability API):**Before a merchant can start transactions, they need a Virtual Payment Address (VPA). The system checks for the availability of the desired VPA, ensuring it's unique and can be assigned to the merchant without conflicts.
 
-<a href="/payments/umap/api-reference#/category~vpa/operation~vpa#checkAvailability"target="_blank">
-<code>checkAvailability</code> ↗
-</a>
-
-<br/>
-
 **VPA Creation (create vpa API):**If the VPA is available, it is created and assigned to the merchant. This final step equips the merchant with the capability to accept payments via UPI, completing the onboarding process and marking the beginning of their transaction journey on the UMAP platform.
-
-<a href="/payments/umap/api-reference#/category~vpa/operation~vpa#create"target="_blank">
-<code>createVpa</code> ↗
-</a>
-
-<br/>
 
 By meticulously following these steps, UMAP ensures a smooth and efficient onboarding experience for merchants, setting the stage for their successful integration into the digital payments landscape.
 
+<img
+  src="https://storage.googleapis.com/strapi-assets/latest/merchant-onboarding/merchant-onboarding.png"
+  alt="Bridge"
+/>
