feat(UPI-1144): add descriptions, mandate lifecycle to mandate notifications
Changes:
- add descriptions, mandate lifecycle to mandate notifications page
- add sub page for merchant notifications under umap mandates page

Closes UPI-1144

--- a/content/payments/umap/notifications/mandates.mdx
+++ b/content/payments/umap/notifications/mandates.mdx
@@ -7,7 +7,20 @@ visible_in_sidebar: true
 
 ## Mandates Notifications & Alerts
 
-### Mandate Initiated
+### UPI Mandate Statuses
+
+A UPI mandate will flow through the below statuses throughout its lifecycle  - 
+
+<img
+  src="https://storage.googleapis.com/strapi-assets/latest/upi-mandate-statuses/upi-mandate-statuses.png"
+  alt="Bridge"
+/>
+
+### Mandate Status Notification
+
+This is the status notification which is a part of all mandate flows which describes the final mandate status post any action taken on the resource. 
+
+#### Mandate Initiated
 
 <CodeBlockWithCopy language="json">
 {`{
@@ -33,7 +46,7 @@ visible_in_sidebar: true
 }`}
 </CodeBlockWithCopy>
 
-### Mandate Live
+#### Mandate Live
 
 <CodeBlockWithCopy language="json">
 {`{
@@ -59,7 +72,7 @@ visible_in_sidebar: true
 }`}
 </CodeBlockWithCopy>
 
-### Mandate Updated
+#### Mandate Updated
 
 <CodeBlockWithCopy language="json">
 {`{
@@ -88,7 +101,7 @@ visible_in_sidebar: true
 }`}
 </CodeBlockWithCopy>
 
-### Mandate Rejected
+#### Mandate Rejected
 
 <CodeBlockWithCopy language="json">
 {`{
@@ -114,7 +127,7 @@ visible_in_sidebar: true
 }`}
 </CodeBlockWithCopy>
 
-### Mandate Revoked
+#### Mandate Revoked
 
 <CodeBlockWithCopy language="json">
 {`{
@@ -141,7 +154,7 @@ visible_in_sidebar: true
 `}
 </CodeBlockWithCopy>
 
-### Mandate Paused
+#### Mandate Paused
 
 <CodeBlockWithCopy language="json">
 {`{
