--- a/content/payments/umap/notifications/mandates/create.mdx
+++ b/content/payments/umap/notifications/mandates/create.mdx
@@ -7,7 +7,11 @@ visible_in_sidebar: true
 
 ## Mandate Create Operation Notifications & Alerts
 
+The merchant webhooks for mandates being registered through UMAP.
+
 ### Mandate Create Initiated
+
+This notification will only be triggered in case the mandate is being created via Intent link/QR.
 
 <CodeBlockWithCopy language="json">
 {`{
@@ -33,6 +37,8 @@ visible_in_sidebar: true
 
 ### Mandate Create Success
 
+This webhook is triggered once UMAP knows the status of the mandate creation process.
+
 <CodeBlockWithCopy language="json">
 {`{
    // Event attributes
@@ -56,6 +62,8 @@ visible_in_sidebar: true
 </CodeBlockWithCopy>
 
 ### Mandate Create Failed
+
+This webhook is triggered once UMAP knows the status of the mandate creation process.
 
 <CodeBlockWithCopy language="json">
 {`{
