--- a/content/payments/umap/notifications/mandates/revoke.mdx
+++ b/content/payments/umap/notifications/mandates/revoke.mdx
@@ -9,6 +9,8 @@ visible_in_sidebar: true
 
 ### Mandate Revoke Initiated
 
+This notification will be sent only in case the revoke is initiated by the end user.
+
 <CodeBlockWithCopy language="json">
 {`{
    // Event attributes
