--- a/content/payments/umap/notifications/mandates/update.mdx
+++ b/content/payments/umap/notifications/mandates/update.mdx
@@ -7,7 +7,11 @@ visible_in_sidebar: true
 
 ## Mandate Update Operation Notifications & Alerts
 
+The merchant webhooks for mandates being updated through UMAP. 
+
 ### Mandate Update Initiated
+
+This notification will only be triggered in case the mandate is updated via Intent link/QR.
 
 <CodeBlockWithCopy language="json">
 {`{
@@ -36,6 +40,8 @@ visible_in_sidebar: true
 
 ### Mandate Update Success
 
+This webhook is triggered once UMAP knows the status of the mandate update process.
+
 <CodeBlockWithCopy language="json">
 {`{
    // Event attributes
@@ -62,6 +68,8 @@ visible_in_sidebar: true
 </CodeBlockWithCopy>
 
 ### Mandate Update Failed
+
+This webhook is triggered once UMAP knows the status of the mandate update process.
 
 <CodeBlockWithCopy language="json">
 {`{
