feat(UPI-1144): create sub pages for check status api, check status history apis
Changes:
- create sub pages for check status api, check status history apis under
umap transaction monitoring page
- add merchantId header to check vpa availability api
spec, create vpa api spec

Closes UPI-1144

--- a/content/payments/umap/merchant-onboarding/create-vpa-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-vpa-api.mdx
@@ -24,6 +24,7 @@ visible_in_sidebar: true
         <tr>
             <th>Header</th>
             <td>
+                <code>merchantId</code><br/>
                 <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
                 Generate this token using <a
                     href="/payments/upi-deeplinks/resources/oauth"
