feat(UPI-1144): add imgs, create refund, fetch dispute api sub pages for refunds and disputes
Changes:
- add images for umap refunds and disputes page
- add sub pages for create refund api, fetch dispute api under umap refunds and disputes page
- add refunds lifecycle to refund notifications page
- add disputes lifecycle to dispute notifications page

Closes UPI-1144

--- a/content/payments/umap/refunds-disputes.mdx
+++ b/content/payments/umap/refunds-disputes.mdx
@@ -25,6 +25,11 @@ UMAP is fully integrated with the National Payments Corporation of India's (NPCI
 
 The UMAP platform's seamless integration with the UDIR framework ensures that merchants can provide prompt and efficient resolutions to disputes, safeguarding both their interests and those of their customers.
 
+<img
+  src="https://storage.googleapis.com/strapi-assets/latest/dispute-statuses/dispute-statuses.png"
+  alt="Bridge"
+/>
+
 ### Refund Statuses
 
 UMAP equips merchants with a straightforward, API-based mechanism to process refunds directly to the customer's bank account originally used for the transaction. This capability not only enhances customer satisfaction through quick and efficient refunds but also streamlines dispute resolution.
@@ -37,15 +42,21 @@ UMAP equips merchants with a straightforward, API-based mechanism to process ref
 
 **Refund Failed:** If the refund process encounters issues—such as the customer's bank account being inactive or blocked—the refund fails. This status alerts the merchant to the unsuccessful refund attempt, necessitating further action to resolve the issue.
 
+<img
+  src="https://storage.googleapis.com/strapi-assets/latest/refund-statuses/refund-statuses.png"
+  alt="Bridge"
+/>
+
 ### Refund Process
 
 **Issuing Refunds:** Merchants can initiate refunds through the create refund API by submitting the details of the original transaction. UMAP coordinates with NPCI to process the refund, ensuring the amount is returned to the customer's account.
 
-<a href="/payments/umap/api-reference#/category~refund/operation~refund#create"target="_blank">
-<code>createRefund</code> ↗
-</a>
-
 **Notification Updates:** Throughout the refund process, UMAP provides merchants with timely updates regarding the refund status, ensuring transparency and allowing merchants to keep their customers informed.
+
+<img
+  src="https://storage.googleapis.com/strapi-assets/latest/refund-process/refund-process.png"
+  alt="Bridge"
+/>
 
 ### Dispute Resolution
 
@@ -54,11 +65,6 @@ Dispute Initiation: Disputes are initiated by customers and communicated to UMAP
 #### Merchant Response
 
 Merchants have the option to either accept or reject the dispute through UMAP:
-
-**Fetch Dispute API:**
-<a href="/payments/umap/api-reference#/category~disputes/operation~disputes#fetchDisputeById"target="_blank">
-<code>fetchDispute</code> ↗
-</a>
 
 **Accepting a Dispute:** Agreeing to the dispute automatically triggers a refund to the customer for the disputed transaction.
 
