fix(UPI-1144): fix curly braces around path parameters in GET API specs
Changes:
- use html character codes for { and } around path parameters in
fetch dispute api spec, check status api spec, check status history API

Closes UPI-1144

--- a/content/payments/umap/refunds-disputes/fetch-dispute-api.mdx
+++ b/content/payments/umap/refunds-disputes/fetch-dispute-api.mdx
@@ -18,7 +18,7 @@ visible_in_sidebar: true
         <tr>
             <th>Path</th>
             <td>
-                <code>/merchants/disputes/{disputeId}</code>
+                <code>/merchants/disputes/&#123;disputeId&#125;</code>
             </td>
         </tr>
         <tr>
