--- a/content/payments/umap/transaction-monitoring/check-status-api.mdx
+++ b/content/payments/umap/transaction-monitoring/check-status-api.mdx
@@ -18,7 +18,7 @@ visible_in_sidebar: true
         <tr>
             <th>Path</th>
             <td>
-                <code>/merchants/payments/{id}</code>
+                <code>/merchants/payments/&#123;id&#125;</code>
             </td>
         </tr>
         <tr>
