--- a/content/payments/umap/transaction-monitoring/check-status-history-api.mdx
+++ b/content/payments/umap/transaction-monitoring/check-status-history-api.mdx
@@ -18,7 +18,7 @@ visible_in_sidebar: true
         <tr>
             <th>Path</th>
             <td>
-                <code>/merchants/payments/product-instances/{id}/history</code>
+                <code>/merchants/payments/product-instances/&#123;id&#125;/history</code>
             </td>
         </tr>
         <tr>
