--- a/content/data/account-aggregator/api-integration/account-availibility-apis.mdx
+++ b/content/data/account-aggregator/api-integration/account-availibility-apis.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_title: Account Availibility
-page_title: Account Aggregator Account Availibility
+sidebar_title: Account Availability
+page_title: Account Aggregator Account Availability
 order: 5
 visible_in_sidebar: true
 ---
